--- a/SimHubPlugin/User.PluginSdkDemo.csproj
+++ b/SimHubPlugin/User.PluginSdkDemo.csproj
@@ -134,7 +134,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="vJoyInterfaceWrap, Version=0.2.1.6, Culture=neutral, PublicKeyToken=null" />
+    <Reference Include="vJoyInterfaceWrap, Version=2.2.2.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\SimHub\vJoyInterfaceWrap.dll</HintPath>
+    </Reference>
     <Reference Include="Windows.Data" />
     <Reference Include="Windows.UI" />
     <Reference Include="WindowsBase" />
