KF const vel filter bugfix. Disabled servos overcurrent protection alarm, since servo deactivated itself last time

--- a/ESP32/platformio.ini
+++ b/ESP32/platformio.ini
@@ -17,6 +17,24 @@ platform_packages =
 	platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#2.0.17
 	platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
 monitor_speed = 921600
+upload_protocol = esptool
+debug_tool = esp-builtin ; builtin nutzt den internen USB-JTAG-Debugger des ESP32-S3.
+debug_init_break = tbreak main ; Hält das Debugging nach der setup()-Funktion an.
+#debug_load_mode = always
+#upload_port = COM17
+monitor_port = COM17
+#build_flags = 
+#	-D CONFIG_ESP_CONSOLE_USB_CDC=y
+#	-D CONFIG_ESP_USB_CDC_ENABLED=y
+#	-D CONFIG_USB_CDC_TRACE=y
+#	-D CONFIG_FREERTOS_UNICORE=0
+#	-D CONFIG_ESP_MAIN_TASK_AFFINITIY=0x1
+#build_type = debug      ;build in debug mode instead of release mode
+; https://community.platformio.org/t/how-to-use-jtag-built-in-debugger-of-the-esp32-s3-in-platformio/36042
+; https://thingpulse.com/usb-settings-for-logging-with-the-esp32-s3-in-platformio/
+; https://warped3.substack.com/p/how-to-debug-esp32s3-devkitc-1-using
+
+
 
 [common]
 lib_deps_external = 
