Increased speed of KF filter const vel

--- a/ESP32/platformio.ini
+++ b/ESP32/platformio.ini
@@ -22,7 +22,7 @@ debug_tool = esp-builtin ; builtin nutzt den internen USB-JTAG-Debugger des ESP3
 debug_init_break = tbreak main ; Hält das Debugging nach der setup()-Funktion an.
 #debug_load_mode = always
 #upload_port = COM17
-monitor_port = COM17
+#monitor_port = COM17
 #build_flags = 
 #	-D CONFIG_ESP_CONSOLE_USB_CDC=y
 #	-D CONFIG_ESP_USB_CDC_ENABLED=y
