error code bug fix

--- a/ESP32/platformio.ini
+++ b/ESP32/platformio.ini
@@ -18,8 +18,8 @@ platform_packages =
 	platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
 monitor_speed = 921600
 upload_protocol = esptool
-debug_tool = esp-builtin ; builtin nutzt den internen USB-JTAG-Debugger des ESP32-S3.
-debug_init_break = tbreak main ; Hält das Debugging nach der setup()-Funktion an.
+#debug_tool = esp-builtin ; builtin nutzt den internen USB-JTAG-Debugger des ESP32-S3.
+#debug_init_break = tbreak main ; Hält das Debugging nach der setup()-Funktion an.
 #debug_load_mode = always
 #upload_port = COM17
 #monitor_port = COM17
@@ -89,7 +89,7 @@ build_unflags =
 	'-D PCB_VERSION=6'
 build_flags = 
 	-O3 # compiler optimization for runtime 
-	'-D PCB_VERSION=3'
+	-D PCB_VERSION=3
 
 [env:esp32-speedcrafter]
 board = esp-wrover-kit
@@ -102,7 +102,7 @@ build_unflags =
 	'-D PCB_VERSION=6'
 build_flags = 
 	-O3 # compiler optimization for runtime 
-	'-D PCB_VERSION=5'
+	-D PCB_VERSION=5
 
 [env:esp32s3usbotg-gilphilbert]
 board = esp32-s3-devkitc-1
