--- a/SimHubPlugin/DIYFFBPedalUI.csproj
+++ b/SimHubPlugin/DIYFFBPedalUI.csproj
@@ -13,6 +13,7 @@
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
     <ProjectGuid>{833040C9-FE5E-4CCF-B21D-71979E049B6B}</ProjectGuid>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -146,6 +147,10 @@
       <HintPath>C:\Program Files (x86)\SimHub\WoteverCommon.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="WoteverLocalization, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Program Files (x86)\SimHub\WoteverLocalization.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CubicSpline.cs" />
@@ -187,6 +192,23 @@
     <Compile Include="UIFunction\GeneralSetting_PID.xaml.cs">
       <DependentUpon>GeneralSetting_PID.xaml</DependentUpon>
     </Compile>
+    <Compile Include="VariablesStruct\Basic_config.cs" />
+    <Compile Include="VariablesStruct\Basic_WIfi_info.cs" />
+    <Compile Include="VariablesStruct\CalculationVariables.cs" />
+    <Compile Include="VariablesStruct\constants.cs" />
+    <Compile Include="VariablesStruct\DAP_action_st.cs" />
+    <Compile Include="VariablesStruct\DAP_bridge_state_st.cs" />
+    <Compile Include="VariablesStruct\DAP_config_st.cs" />
+    <Compile Include="VariablesStruct\DAP_state_basic_st.cs" />
+    <Compile Include="VariablesStruct\DAP_state_extended_st.cs" />
+    <Compile Include="VariablesStruct\payloadBridgeState.cs" />
+    <Compile Include="VariablesStruct\payloadFooter.cs" />
+    <Compile Include="VariablesStruct\payloadHeader.cs" />
+    <Compile Include="VariablesStruct\payloadPedalAction.cs" />
+    <Compile Include="VariablesStruct\payloadPedalConfig.cs" />
+    <Compile Include="VariablesStruct\payloadPedalState_Basic.cs" />
+    <Compile Include="VariablesStruct\payloadPedalState_Extended.cs" />
+    <Compile Include="VariablesStruct\Profile_Online.cs" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="OnlineProfile.xaml">
