fix OTA update for V3 esp32series board

--- a/ESP32/platformio.ini
+++ b/ESP32/platformio.ini
@@ -88,7 +88,7 @@ lib_deps =
 build_unflags = 
 	'-D PCB_VERSION=6'
 build_flags = 
-	-O3 # compiler optimization for runtime 
+	#-O3 # compiler optimization for runtime 
 	-D PCB_VERSION=3
 
 [env:esp32-speedcrafter]
@@ -101,7 +101,7 @@ lib_deps =
 build_unflags = 
 	'-D PCB_VERSION=6'
 build_flags = 
-	-O3 # compiler optimization for runtime 
+	#-O3 # compiler optimization for runtime 
 	-D PCB_VERSION=5
 
 [env:esp32s3usbotg-gilphilbert]
