--- a/ESP32_master/platformio.ini
+++ b/ESP32_master/platformio.ini
@@ -34,15 +34,15 @@ board_build.f_cpu = 240000000L
 build_flags = 
 	-DARDUINO_RUNNING_CORE=0
 	-DCORE_DEBUG_LEVEL=0
-	-DARDUINO_USB_MODE=0
+	-DARDUINO_USB_MODE=2
 	-DARDUINO_USB_CDC_ON_BOOT=0
 	-DARDUINO_USB_MSC_ON_BOOT=0
 	-DARDUINO_USB_DFU_ON_BOOT=0
 	-DPCB_VERSION=6
-	'-DUSB_VID=0xF011'
-	'-DUSB_PID=0xF011'
-	'-DUSB_PRODUCT="DiyFfbPedal"'
-	'-DUSB_MANUFACTURER="OpenSource"'
+	-DCFG_TUSB_MCU=OPT_MCU_ESP32S3
+	-DCFG_TUSB_OS=OPT_OS_FREERTOS
+	-DCFG_TUD_HID=1
+
 board_upload.use_1200bps_touch = yes
 board_upload.wait_for_upload_port = yes
 board_upload.require_upload_port = yes
