--- a/ESP32_master/platformio.ini
+++ b/ESP32_master/platformio.ini
@@ -33,7 +33,7 @@ board = esp32-s3-devkitc-1
 board_build.f_cpu = 240000000L
 build_flags = 
 	-DARDUINO_RUNNING_CORE=0
-	-DCORE_DEBUG_LEVEL=0
+	-DCORE_DEBUG_LEVEL=1
 	-DARDUINO_USB_MODE=2
 	-DARDUINO_USB_CDC_ON_BOOT=0
 	-DARDUINO_USB_MSC_ON_BOOT=0
@@ -49,7 +49,8 @@ board_upload.require_upload_port = yes
 lib_deps = 
 	${common.lib_deps_external}
 	
-	Joystick_ESP32S2=https://github.com/schnoog/Joystick_ESP32S2/archive/refs/heads/dev.zip
+	#Joystick_ESP32S2=https://github.com/schnoog/Joystick_ESP32S2/archive/refs/heads/dev.zip
+	Joystick_ESP32S3=https://github.com/tcfshcrw/Joystick_ESP32S3/archive/refs/heads/main.zip
 	adafruit/Adafruit MCP4725@^2.0.2
 
 [env:esp32]
