restart function for gilphilbert board
1. Add restart function for gilphilbert board 1.2 with serial connection
2. add the bukd flag for V4/V5/GIlphilbert board for fixing the tusb error

--- a/ESP32/platformio.ini
+++ b/ESP32/platformio.ini
@@ -55,15 +55,15 @@ build_flags =
 	-O3 # compiler optimization for runtime 
 	-DARDUINO_RUNNING_CORE=1
 	-DCORE_DEBUG_LEVEL=0
-	-DARDUINO_USB_MODE=0
+	-DARDUINO_USB_MODE=2
 	-DARDUINO_USB_CDC_ON_BOOT=0
 	-DARDUINO_USB_MSC_ON_BOOT=0
 	-DARDUINO_USB_DFU_ON_BOOT=0
 	-DPCB_VERSION=6
-	'-DUSB_VID=0xF011'
-	'-DUSB_PID=0xF011'
-	'-DUSB_PRODUCT="DiyFfbPedal"'
-	'-DUSB_MANUFACTURER="OpenSource"'
+	-DCFG_TUSB_MCU=OPT_MCU_ESP32S3
+	-DCFG_TUSB_OS=OPT_OS_FREERTOS
+	-DCFG_TUD_HID=1
+
 board_upload.use_1200bps_touch = yes
 board_upload.wait_for_upload_port = yes
 board_upload.require_upload_port = yes
@@ -118,6 +118,9 @@ build_flags =
 	-DPCB_VERSION=7
 	-DUSB_VID=0xF011
 	-DUSB_PID=0xF011
+	-DCFG_TUSB_MCU=OPT_MCU_ESP32S3
+	-DCFG_TUSB_OS=OPT_OS_FREERTOS
+	-DCFG_TUD_HID=1
 	'-DUSB_PRODUCT="DiyFfbPedal"'
 	'-DUSB_MANUFACTURER="OpenSource"'
 board_upload.use_1200bps_touch = yes
@@ -126,6 +129,7 @@ board_upload.require_upload_port = yes
 lib_deps = 
 	${common.lib_deps_external}
 	schnoog/Joystick_ESP32S2 @ ^0.9.4
+	#Joystick_ESP32S3=https://github.com/tcfshcrw/Joystick_ESP32S3/archive/refs/heads/main.zip
 	adafruit/Adafruit MCP4725 @ ^2.0.2
 	regenbogencode/ESPNowW@^1.0.2	
 	adafruit/Adafruit NeoPixel@^1.12.3
@@ -141,15 +145,15 @@ build_flags =
 	-O3  # compiler optimization for runtime 
 	-DARDUINO_RUNNING_CORE=1
 	-DCORE_DEBUG_LEVEL=0
-	-DARDUINO_USB_MODE=0
+	-DARDUINO_USB_MODE=2
 	-DARDUINO_USB_CDC_ON_BOOT=0
 	-DARDUINO_USB_MSC_ON_BOOT=0
 	-DARDUINO_USB_DFU_ON_BOOT=0
 	-DPCB_VERSION=9
-	'-DUSB_VID=0xF011'
-	'-DUSB_PID=0xF011'
-	'-DUSB_PRODUCT="DiyFfbPedal"'
-	'-DUSB_MANUFACTURER="OpenSource"'
+	-DCFG_TUSB_MCU=OPT_MCU_ESP32S3
+	-DCFG_TUSB_OS=OPT_OS_FREERTOS
+	-DCFG_TUD_HID=1
+
 board_upload.use_1200bps_touch = yes
 board_upload.wait_for_upload_port = yes
 board_upload.require_upload_port = yes
@@ -172,15 +176,15 @@ build_flags =
 	-O3  # compiler optimization for runtime 
 	-DARDUINO_RUNNING_CORE=1
 	-DCORE_DEBUG_LEVEL=0
-	-DARDUINO_USB_MODE=0
+	-DARDUINO_USB_MODE=2
 	-DARDUINO_USB_CDC_ON_BOOT=0
 	-DARDUINO_USB_MSC_ON_BOOT=0
 	-DARDUINO_USB_DFU_ON_BOOT=0
 	-DPCB_VERSION=8
-	'-DUSB_VID=0xF011'
-	'-DUSB_PID=0xF011'
-	'-DUSB_PRODUCT="DiyFfbPedal"'
-	'-DUSB_MANUFACTURER="OpenSource"'
+	-DCFG_TUSB_MCU=OPT_MCU_ESP32S3
+	-DCFG_TUSB_OS=OPT_OS_FREERTOS
+	-DCFG_TUD_HID=1
+
 board_upload.use_1200bps_touch = yes
 board_upload.wait_for_upload_port = yes
 board_upload.require_upload_port = yes
@@ -235,15 +239,15 @@ build_flags =
 	-O3 # compiler optimization for runtime 
 	-DARDUINO_RUNNING_CORE=1
 	-DCORE_DEBUG_LEVEL=0
-	-DARDUINO_USB_MODE=0
+	-DARDUINO_USB_MODE=2
 	-DARDUINO_USB_CDC_ON_BOOT=0
 	-DARDUINO_USB_MSC_ON_BOOT=0
 	-DARDUINO_USB_DFU_ON_BOOT=0
 	-DPCB_VERSION=12
-	'-DUSB_VID=0xF011'
-	'-DUSB_PID=0xF011'
-	'-DUSB_PRODUCT="DiyFfbPedal"'
-	'-DUSB_MANUFACTURER="OpenSource"'
+	-DCFG_TUSB_MCU=OPT_MCU_ESP32S3
+	-DCFG_TUSB_OS=OPT_OS_FREERTOS
+	-DCFG_TUD_HID=1
+
 board_upload.use_1200bps_touch = yes
 board_upload.wait_for_upload_port = yes
 board_upload.require_upload_port = yes
